...
        <Tab.Screen
          name="Actions"
          component={Actions}
          options={{
            title: 'PUSHWOOSH DEMO',
            tabBarLabel: 'Actions',
            ...tabTestID('tab-actions'),
          }}
        />
        <Tab.Screen
          name="Settings"
          component={Settings}
          options={{
            title: 'PUSHWOOSH DEMO',
            tabBarLabel: 'Settings',
            ...tabTestID('tab-settings'),
          }}
        />
        <Tab.Screen
          name="DeepLink"
          component={DeepLink}
          options={{
...
